# simple-cpp-tests

./: .gitignore  getdigits.cpp  hello.c
misc/: prime.cpp  ships.cpp
notes/: CMake.txt
src/basics/arrays/: array.cpp
src/basics/assert/: assert.cpp
src/basics/classes/vec/: vec.cpp
src/basics/counter/: counter.cpp
src/basics/enums/: enums.cpp
src/basics/exceptions/: exception.cpp
src/basics/incrdecroperators/: incrdecroperators.cpp
src/basics/modules/: Vec.cpp  Vec.h  user.cpp
src/basics/pointers/: pointers.cpp
src/basics/square/: square.cc
src/basics/types/: types.cc
src/functional/: CMakeLists.txt  hello.cpp
src/mem/: lrtest.cpp  test1.c
src/misc/: CMakeLists.txt  lambdas.cpp
